syntax = "proto3";

service TodoService {
    rpc GetTodos(TodosRequest) returns (TodoList) {};
    rpc AddTodo(Todo) returns (Todo) {};
    rpc UpdateTodo(Todo) returns (Todo) {};
    rpc DeleteTodo(Todo) returns (Todo) {};
    rpc GetAllTodos(Empty) returns (TodoList) {};
}

message Empty {}

message Todo {
    string id = 1;
    string title = 2;
    optional string description = 3;
}

message TodoList {
    repeated Todo todos = 1;
}

message TodosRequest {
    string id = 1;
}